# TopoBD

./: .gitignore  pyproject.toml  run_experiment.py  run_experiments.py
attacks/: a3fl_client.py  chameleon_client.py  iba_client.py  neurotoxin_client.py
attacks/triggers/: __init__.py  a3fl.py  base.py  iba.py  patch.py  unet.py
datasets/: __init__.py  adapter.py  backdoor.py  cifar10.py  femnist.py  gtsrb.py  mnist.py  utils.py
defenses/: __init__.py  mkrum.py
experiment/: __init__.py  config.py  metrics.py  runner.py  utils.py
fl/: __init__.py  client.py  server.py
models/: __init__.py  base.py  cnn.py  gtsrb_cnn.py  lenet5.py  resnet.py
